WIP 2way binding test

--- a/app/src/main/res/layout/step1_fragment.xml
+++ b/app/src/main/res/layout/step1_fragment.xml
@@ -13,10 +13,11 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.Step1Fragment">
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
+            android:layout_gravity="center"
             android:layout_height="match_parent"
-            android:text="1" />
+            android:text="@={viewModel.data" />
 
     </FrameLayout>
 </layout>
