--- a/app/src/main/res/layout/step1_fragment.xml
+++ b/app/src/main/res/layout/step1_fragment.xml
@@ -5,19 +5,26 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.viewpager2testwithlivedata.ui.main.Step2ViewModel" />
+            type="com.example.viewpager2testwithlivedata.ui.main.Step1ViewModel" />
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".ui.main.Step1Fragment">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_gravity="center"
-            android:layout_height="match_parent"
-            android:text="@={viewModel.data" />
+            android:layout_height="wrap_content"
+            android:text="@={viewModel.data}" />
 
-    </FrameLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:text="@={viewModel.string1}" />
+
+    </LinearLayout>
 </layout>
