works as you would expect

--- a/app/src/main/res/layout/step2_fragment.xml
+++ b/app/src/main/res/layout/step2_fragment.xml
@@ -12,10 +12,10 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.Step2Fragment">
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@{viewModel.data}" />
+            android:text="@={viewModel.data}" />
 
     </FrameLayout>
 </layout>
