--- a/app/src/main/res/layout/step2_fragment.xml
+++ b/app/src/main/res/layout/step2_fragment.xml
@@ -13,7 +13,7 @@
         tools:context=".ui.main.Step2Fragment">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="@={viewModel.data}" />
 
