--- a/app/src/main/res/layout/step4_fragment.xml
+++ b/app/src/main/res/layout/step4_fragment.xml
@@ -7,15 +7,22 @@
             name="viewModel"
             type="com.example.viewpager2testwithlivedata.Step4ViewModel" />
     </data>
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".ui.main.Step2Fragment">
+
+
+        <TextView
+            android:text="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="@={viewModel.data}" />
 
-    </FrameLayout>
+    </LinearLayout>
 </layout>
